# mcpelauncher-linker

./: .gitmodules  CMakeLists.txt
GTest/: CMakeLists.txt.in
include/: assert.h  compat.h  dlfcn.h  libgen.h  strlcpy.h  unistd.h
include/bsd/sys/: cdefs.h
include/src/: main.cpp  native_activity.h
include/sys/: auxv.h  cdefs.h  socket.h
public_include/mcpelauncher/: linker.h
src/: hooks.c  hooks_darwin_pthread_once.cpp  hooks_darwin_pthread_once.h  hooks_io.c  hooks_net.c  hooks_pthread.c  hooks_shm.c  hooks_shm.h  jni.h  linker-test.cpp  linker.cpp  native_activity.h
